fix: disable horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -21,11 +21,14 @@ html{
 }
 
 body {
+    max-width: 100%;
+    overflow-x: hidden;
     margin: 0;
     padding: 0;
     font-family: 'Quicksand', sans-serif;
     display: flex;
     flex-direction: column;
+    
 }
 
 .container {
